package com.example.authme.testing

object TestTag {
    const val UserListScreen_TextField = "UserListScreen_TextField"
    const val UserListItem = "UserListItem"
    const val UserListItem_Text_Login = "UserListItem_Text_Login"
    const val UserListItem_Text_Staff = "UserListItem_Text_Staff"

    const val UserInfoScreen_Btn_Back = "UserInfoScreen_Btn_Back"
    const val UserInfoScreen_Text_Error = "UserInfoScreen_Text_Error"
    const val InfoBody_Text_Name = "InfoBody_Text_Name"
    const val InfoBody_Text_Bio = "InfoBody_Text_Bio"
    const val InfoBody_Text_Login = "InfoBody_Text_Login"
    const val InfoBody_Text_Staff = "InfoBody_Text_Staff"
    const val InfoBody_Text_Location = "InfoBody_Text_Location"
    const val InfoBody_Text_Blog = "InfoBody_Text_Blog"
}